--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tailwind CSS start</title>
+    <!-- Tailwind link script -->
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
 <header>
@@ -16,7 +18,9 @@
 </header>
 <main>
 <section class="">
-
+    <h1 class="text-3xl font-bold underline">
+        HeY Days!
+      </h1>
 </section>
 </main>
 <footer>
