main branch recursion

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <section class="">
 <h1>Tailwind css secret you don't know</h1>
 <h2>That will exposed today</h2>
-<p>This is will be Amazing</p>
+<p class="bg-blue-500 text-white">This is will be Amazing</p>
 </section>
 </header>
 <main>
