--- a/index.html
+++ b/index.html
@@ -11,12 +11,41 @@
 <body>
 <header>
 <section class="">
-<h1>Tailwind css secret you don't know</h1>
-<h2>That will exposed today</h2>
+<h1 class="text-7xl">Tailwind css secret you don't know</h1>
+<h2 class="text-3xl font-extrabold">That will exposed today</h2>
+<h2 class="text-3xl font-bold">That will exposed today</h2>
+<h2 class="text-3xl">That will exposed today</h2>
+<h2 class="text-3xl">That will exposed today</h2>
 <p class="bg-blue-500 text-white">This is will be Amazing</p>
 </section>
 </header>
 <main>
+<section class="">
+    <div class="container my-2 border-4 border-indigo-500/100">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam numquam sint error delectus ea aspernatur incidunt laborum, minus perferendis voluptate sequi mollitia placeat odio dolore! Sed consequatur ullam voluptates provident porro alias nostrum. Natus, ipsam ad labore voluptates sit quas assumenda pariatur obcaecati hic earum tempore voluptatum et ex id.
+        </p>
+    </div>
+    <div class="container my-2 ml-10 border-4 border-purple-500/100">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam numquam sint error delectus ea aspernatur incidunt laborum, minus perferendis voluptate sequi mollitia placeat odio dolore! Sed consequatur ullam voluptates provident porro alias nostrum. Natus, ipsam ad labore voluptates sit quas assumenda pariatur obcaecati hic earum tempore voluptatum et ex id.
+        </p>
+    </div>
+    <div class="container my-2 border-4 border-yellow-500/100">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam numquam sint error delectus ea aspernatur incidunt laborum, minus perferendis voluptate sequi mollitia placeat odio dolore! Sed consequatur ullam voluptates provident porro alias nostrum. Natus, ipsam ad labore voluptates sit quas assumenda pariatur obcaecati hic earum tempore voluptatum et ex id.
+        </p>
+    </div>
+    <div class="container my-2 border-4 border-red-500/100">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam numquam sint error delectus ea aspernatur incidunt laborum, minus perferendis voluptate sequi mollitia placeat odio dolore! Sed consequatur ullam voluptates provident porro alias nostrum. Natus, ipsam ad labore voluptates sit quas assumenda pariatur obcaecati hic earum tempore voluptatum et ex id.
+        </p>
+    </div>
+    <div class="container my-2 -ml-10 border-4 border-blue-500/100">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam numquam sint error delectus ea aspernatur incidunt laborum, minus perferendis voluptate sequi mollitia placeat odio dolore! Sed consequatur ullam voluptates provident porro alias nostrum. Natus, ipsam ad labore voluptates sit quas assumenda pariatur obcaecati hic earum tempore voluptatum et ex id. container my-2 -ml-10 border-4 border-blue-500/100
+        </p>
+    </div>
+    <div class="container my-2 border-4 border-green-500/100">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam numquam sint error delectus ea aspernatur incidunt laborum, minus perferendis voluptate sequi mollitia placeat odio dolore! Sed consequatur ullam voluptates provident porro alias nostrum. Natus, ipsam ad labore voluptates sit quas assumenda pariatur obcaecati hic earum tempore voluptatum et ex id.
+        </p>
+    </div>
+</section>
 <section class="">
     <h1 class="text-3xl font-bold underline">
         HeY Days!
