--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tailwind CSS start</title>
+    <!-- favicon Link -->
+    <link rel="shortcut icon" href="./assets/favicontailwindcss-mark.svg" type="image/x-icon">
     <!-- Tailwind link script -->
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -44,6 +46,14 @@
     <div class="container my-2 border-4 border-green-500/100">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam numquam sint error delectus ea aspernatur incidunt laborum, minus perferendis voluptate sequi mollitia placeat odio dolore! Sed consequatur ullam voluptates provident porro alias nostrum. Natus, ipsam ad labore voluptates sit quas assumenda pariatur obcaecati hic earum tempore voluptatum et ex id.
         </p>
+    </div>
+</section>
+<section class="flex justify-evenly">
+    <div class="h-64 bg-blue-200 w-64 flex justify-center items-center">
+        <h2 class="text-5xl font-bold bg-purple-200">Heading</h2>
+    </div>
+    <div class="">
+        <h2 class="text-5xl font-bold bg-orange-200">Some 2 no. Heading</h2>
     </div>
 </section>
 <section class="">
