--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </p>
     </div>
     <div class="container my-2 -ml-10 border-4 border-blue-500/100">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam numquam sint error delectus ea aspernatur incidunt laborum, minus perferendis voluptate sequi mollitia placeat odio dolore! Sed consequatur ullam voluptates provident porro alias nostrum. Natus, ipsam ad labore voluptates sit quas assumenda pariatur obcaecati hic earum tempore voluptatum et ex id. container my-2 -ml-10 border-4 border-blue-500/100
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam numquam sint error delectus ea aspernatur incidunt laborum, minus perferendis voluptate sequi mollitia placeat odio dolore! Sed consequatur ullam voluptates provident porro alias nostrum. Natus, ipsam ad labore voluptates sit quas assumenda pariatur obcaecati hic earum tempore voluptatum et ex id.  <strong>class="container my-2 -ml-10 border-4 border-blue-500/100"</strong>
         </p>
     </div>
     <div class="container my-2 border-4 border-green-500/100">
