--- a/index.html
+++ b/index.html
@@ -56,6 +56,85 @@
         <h2 class="text-5xl font-bold bg-orange-200">Some 2 no. Heading</h2>
     </div>
 </section>
+<h2 class="text-5xl">Some Mohan Goran Grid stm.</h2>
+< section class="container flex flex-wrap bg-orange-500">
+<!-- .bg-sky-700.m-4.p-4.rounded-lg.border-4.hover:border-lime-300{$}*25 -->
+.bg-sky-700.m-4.p-4.rounded-lg.border-4.hover:border-lime-300{$}*25
+<section class="container flex flex-wrap bg-orange-500">
+<!-- .bg-sky-700.m-4.p-4.rounded-lg.border-4.hover:border-lime-300{$}*25 -->
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">1</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">2</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">3</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">4</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">5</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">6</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">7</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">8</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">9</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">10</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">11</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">12</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">13</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">14</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">15</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">16</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">17</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">18</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">19</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">20</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">21</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">22</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">23</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">24</div>
+<div class="bg-sky-700 m-4 p-4 rounded-lg border-4 hover:border-lime-300">25</div>
+</section>
+< section class="container grid grid-cols-7 bg-indigo-500">
+<!-- .bg-lime-500.m-4.p-4.rounded-md.border-4.hover:border-cyan-400{$}*25 -->
+.bg-lime-500.m-4.p-4.rounded-md.border-4.hover:border-cyan-400{$}*25
+<section class="container grid grid-cols-7 bg-indigo-500">
+<!-- .bg-lime-500.m-4.p-4.rounded-md.border-4.hover:border-cyan-400{$}*25 -->
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">1</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">2</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">3</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">4</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">5</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">6</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">7</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">8</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">9</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">10</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">11</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">12</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">13</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">14</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">15</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">16</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">17</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">18</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">19</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">20</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">21</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">22</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">23</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">24</div>
+<div class="bg-lime-500 m-4 p-4 rounded-md border-4 hover:border-cyan-400">25</div>
+</section>
+< section class="grid grid-cols-3 bg-purple-200 gap-4">
+< div class="bg-emerald-400 col-span-3 p-4 rounded-md border-4 hover:border-amber-200">01< /div>
+< div class="bg-emerald-400 p-4 h-64 col-span-2 row-span-2 rounded-md border-4 hover:border-amber-200">02< /div>
+< div class="bg-emerald-400 p-4 row-span-2 rounded-md border-4 hover:border-amber-200">03<  /div>
+< div class="bg-emerald-400 p-4 h-24 col-span-3 rounded-md border-4 hover:border-amber-200">04< /div>
+< /section>
+<section class="grid grid-cols-3 p-4 bg-purple-200 gap-4">
+<div class="bg-emerald-400 col-span-3 p-4 h-24 rounded-md border-4 hover:border-amber-200">
+    01
+</div>
+<div class="bg-emerald-400 p-4 h-64 col-span-2 row-span-2 rounded-md border-4 hover:border-amber-200">
+    02
+</div>
+<div class="bg-emerald-400 p-4 row-span-2 rounded-md border-4 hover:border-amber-200">03</div>
+<div class="bg-emerald-400 p-4 h-32 col-span-3 rounded-md border-4 hover:border-amber-200">04</div>
+</section>
 <section class="">
     <h1 class="text-3xl font-bold underline">
         HeY Days!
